--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Deploy Docker Compose
         uses: appleboy/ssh-action@v1.2.1
         with:
-          host: ${{ secrets.HOST_SERVERLAB06 }}
+          host: ${{ secrets.HOST_SERVER }}
           username: ${{ secrets.HOST_USER_NAME }}
           key: ${{ secrets.HOST_SSH_PRIVATE_KEY }}
           port: 22
